1999-09-13  Kjartan Maraas  <kmaraas@online.no>

	* doc/C/gnomecal.sgml: Updated and synced with the latest 
	version of gnome-users-guide. (1.0.6)
	
1999-08-30  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* calendar.c (calendar_object_changed): Modify the
	object->last_mod field.
	(calendar_add_object): Ditto.

	Closes bug #676

	* main.c (save_calendar_cmd): Fix problem in which we warned the
	user about the calendar being modified the first time the calendar
	was used. 

1999-04-27  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-month-item.c (gnome_month_item_set_arg): Fixed cut&paste
	bug for day fontsets.

1999-05-26  Russell Steinthal  <steintr@condor.penguinpowered.com>

	* gncal-todo.c main.c main.h prop.c: Added support for priorities
	for todo items.  Doesn't do much, but you can set them and sort by
	them.  (Use the properties box to enable them; should they be on
	by default?)

1999-05-25  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* main.c (parse_an_arg): Added missing break here.  It was causing
	core dumps when invoked with --userfile.

	* gnome-cal.c (gnome_calendar_set_view): Add some assertions here,
	to pin point the bug reported on gnome-list.

	* calobj.c (load_recurrence): Make intervals always exist.  a 0
	interval is wrong.

1999-05-25  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* year-view.c: Removed unused macro CALENDAR_HEIGHT.

1999-05-25  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* year-view.c (idle_handler): Set the canvas scroll region here,
	not in size_allocate().  Also, use the correct width and height
	based on the allocation and the precomputed minimum width/height
	values.

	* gnome-cal.c (setup_widgets): Set the scrollbar policy of the
	scrolled window.

	* main.c (setup_appbar): Use the correct type for the appbar.

	* gncal-day-view.c: Removed unused function switch_to_day().

	* gncal-day-panel.c (calendar_day_selected): Removed unused variable.

1999-05-25  Nat Friedman  <nat@nat.org>
