@@ -1,3 +1,8 @@
+1999-09-14  Federico Mena Quintero  <federico@redhat.com>
+
+	* gncal-full-day.c (child_popup_menu): Set the data pointers for
+	all the items.
+
 1999-09-13  Kjartan Maraas  <kmaraas@online.no>
 
 	* doc/C/gnomecal.sgml: Updated and synced with the latest 
